--- a/views/cofficedo.xml
+++ b/views/cofficedo.xml
@@ -108,11 +108,21 @@
       </field>
     </record>
 
+    <record model="ir.ui.view" id="session_calendar_view">
+      <field name="name">session.calendar</field>
+      <field name="model">cofficedo.session</field>
+      <field name="arch" type="xml">
+        <calendar string="Session Calendar" date_start="start_date" date_stop="end_date" color="instructor_id">
+          <field name="name"/>                    
+        </calendar>
+      </field>
+    </record>
+
     <record model="ir.actions.act_window" id="session_list_action">
       <field name="name">Sessions</field>
       <field name="res_model">cofficedo.session</field>
       <field name="view_type">form</field>
-      <field name="view_mode">tree,form</field>
+      <field name="view_mode">tree,form,calendar</field>
       <field name="help" type="html">
         <p class="oe_view_nocontent_create">Create the sessions</p>
       </field>
