--- a/views/cofficedo.xml
+++ b/views/cofficedo.xml
@@ -123,11 +123,21 @@
       </field>
     </record>
 
+    <record model="ir.ui.view" id="session_gantt_view">
+      <field name="name">session.gantt</field>
+      <field name="model">cofficedo.session</field>
+      <field name="arch" type="xml">
+        <gantt string="Session Gantt" color="course_id"date_start="start_date" date_delay="hours" default_group_by='instructor_id'>
+          <field name="name"/>
+        </gantt>
+      </field>
+    </record>
+
     <record model="ir.actions.act_window" id="session_list_action">
       <field name="name">Sessions</field>
       <field name="res_model">cofficedo.session</field>
       <field name="view_type">form</field>
-      <field name="view_mode">tree,form,calendar</field>
+      <field name="view_mode">tree,form,calendar,gantt</field>
       <field name="help" type="html">
         <p class="oe_view_nocontent_create">Create the sessions</p>
       </field>
