Adding graph view

--- a/views/cofficedo.xml
+++ b/views/cofficedo.xml
@@ -133,11 +133,22 @@
       </field>
     </record>
 
+    <record model="ir.ui.view" id="cofficedo_session_graph_view">
+      <field name="name">cofficedo.session.graph</field>
+      <field name="model">cofficedo.session</field>
+      <field name="arch" type="xml">
+        <graph string="Participations by Courses">
+          <field name="course_id"/>
+          <field name="attendees_count" type="measure"/>
+        </graph>
+      </field>
+    </record>
+
     <record model="ir.actions.act_window" id="session_list_action">
       <field name="name">Sessions</field>
       <field name="res_model">cofficedo.session</field>
       <field name="view_type">form</field>
-      <field name="view_mode">tree,form,calendar,gantt</field>
+      <field name="view_mode">tree,form,calendar,gantt,graph</field>
       <field name="help" type="html">
         <p class="oe_view_nocontent_create">Create the sessions</p>
       </field>
